[package]
name = "boombots-server"
version = "0.1.0"
edition = "2021"

[dependencies]
boombots-core = { path = "../core" } 
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.16.1"
tokio-threadpool = "0.1.18"
futures-util = "0.3.19"
anyhow = "1.0.53"
