[package]
name = "engine"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = true

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }

[[bench]]
name = "search"
harness = false

[[bench]]
name = "bitboard"
harness = false

[[bench]]
name = "bitwise"
harness = false

[dependencies]
tinyvec = "1.5.1"
