[package]
name = "engine-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.engine]
path = ".."

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "fuzz_adj"
path = "fuzz_targets/fuzz_adj.rs"
test = false
doc = false

[[bin]]
name = "fuzz_dist"
path = "fuzz_targets/fuzz_dist.rs"
test = false
doc = false
